# ISE-CS4422-Linux-Driver

./: .gitignore  LICENSE  README.md  chacha_throughput_test
.zed/: debug.json
api/: .gitignore  cli_wrapper.py  main.py  users.py
api/static/: index.html  script.js  style.css
api/vaults/: test1.vault
chacha20/: chacha20.c  chacha20.h  linux-crypt.h
chacha20/include/: ecrypt-portable.h
chatest/: Cargo.toml
chatest/src/: main.rs
driver/: Makefile  chacha.c  chacha.h  chacha_cdev.c  chacha_ioctl.c  chacha_ioctl.h  chacha_proc.c  chacha_rw.c  compile_commands.json
gui/: README.md  backend.py  main.py  pyproject.toml  requirements.txt  window.py
gui/screens/: create_vault.py  entry_form.py  unlock.py  vault.py
passman_cli/: Cargo.toml  test_vlt  vault.md
passman_cli/src/: cli.rs  main.rs  stats.rs
passman_rs/: Cargo.toml  test_vlt
passman_rs/src/: chacha_dev.rs  cli.rs  lib.rs  main.rs  stats.rs
passman_rs/src/stats/: fetch_stats.rs
throughput_test/: Cargo.toml
throughput_test/src/: main.rs
