[project]
name = "passman-gui"
version = "0.1.0"
description = "GUI for the passman ChaCha20 password manager"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.48.0",
]

[project.scripts]
passman-gui = "main:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"