[project]
name = "passman-gui"
version = "0.1.0"
description = "GUI for the passman ChaCha20 password manager"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.48.0",
]

[project.scripts]
passman-gui = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
